# libassert

./: meson.build
subprojects/: cpptrace.wrap
